fix: right container overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@ html,
 	height: 100%;
 }
 
+html {
+	overflow: hidden;
+}
+
 * {
 	padding: 0;
 	margin: 0;
